# BI-PA2----Semestral-work

./: README.md
SemestralWork/: .gitignore  CMakeLists.txt  Cestne_prohlaseni.txt  Doxyfile  Makefile  My_config.txt  TodoList  main  popis_zadani.txt
SemestralWork/doc/: graph_legend.html  index.html
SemestralWork/examples/TESTER/COPY ME/PT7/: CMakeLists.txt  exec  main
SemestralWork/examples/TESTER/DelFold/genDATA/: CMakeLists.txt  main
SemestralWork/src/: CAbsWidnow.cpp  CAbsWidnow.h  CConfirmDialog.cpp  CConfirmDialog.h  CDate.cpp  CDate.h  CDir.cpp  CDir.h  CErrDialog.cpp  CErrDialog.h  CFile.cpp  CFile.h  CHelpBar.cpp  CHelpBar.h  CInputDialog.cpp  CInputDialog.h  CItem.cpp  CItem.h  CLink.cpp  CLink.h  CManager.cpp  CManager.h  CManagerOPs.cpp  CManagerOPs.h  CMenu.cpp  CMenu.h  CPermission.cpp  CPermission.h  CSize.cpp  CSize.h  CWindow.cpp  CWindow.h  main.cpp
