cmake_minimum_required(VERSION 3.21)
project(SemestralWork)

set(CMAKE_CXX_STANDARD 17)

add_executable(SemestralWork src/main.cpp src/CItem.cpp src/CItem.h src/CDir.h src/CDir.cpp src/CLink.cpp src/CLink.h src/CFile.cpp src/CFile.h src/CManager.cpp src/CManager.h src/CWindow.cpp src/CWindow.h src/CSize.cpp src/CSize.h src/CMenu.cpp src/CMenu.h src/CHelpBar.cpp src/CHelpBar.h src/CConfirmDialog.cpp src/CConfirmDialog.h src/CInputDialog.cpp src/CInputDialog.h src/CAbsWidnow.cpp src/CAbsWidnow.h src/CManagerOPs.cpp src/CManagerOPs.h src/CErrDialog.cpp src/CErrDialog.h)
